Changelog
=========

0.3.1 (Unreleased)
------------------

* do not fail if the configured header was not found [keul]

0.3.0 (2011-10-17)
------------------

* Fixed compatibliy with webserverauth [yurj]
* Updates tests on Plone 4.1 [keul]

0.2.0 (2010-10-04)
------------------

* Fixed project URL on plone.org [keul]
* Added plugin icon [keul]
* Fixed broken tests [keul]
* Added z3c.autoinclude support [keul]

0.1.0a (2010-03-24)
-------------------

* Initial release